# diagrammer

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/components/: mod.rs
render/: Cargo.toml
render/src/: lib.rs
src/: main.rs
