[package]
name = "diagrammer-core"
version = "0.1.0"
authors = ["Nicholas Clare <nickclare@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.20"
geom = "0.2.3"
rgb = "0.8.25"
rusttype = "0.9.2"
svg = "0.8.0"